5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1594_1801.log
== TEST (2019-05-29 11:25:15) 
-- CODE:
no=input("Nome do objeto: ")
nr=int(input("Numero de repeticoes do feitico: "))
str=("Abra",no,","nr)*nr
print(str)
-- ERROR:
File "XXXX", line 3
    str=("Abra",no,","nr)*nr
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:25:23) 
-- CODE:
no=input("Nome do objeto: ")
nr=int(input("Numero de repeticoes do feitico: "))
st=("Abra",no,","nr)*nr
print(st)
-- ERROR:
File "XXXX", line 3
    st=("Abra",no,","nr)*nr
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:25:25) 
-- CODE:
no=input("Nome do objeto: ")
nr=int(input("Numero de repeticoes do feitico: "))
st=("Abra",no,","nr)*nr
print(st)
-- ERROR:
File "XXXX", line 3
    st=("Abra",no,","nr)*nr
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:25:36) 
-- CODE:
no=input("Nome do objeto: ")
nr=int(input("Numero de repeticoes do feitico: "))
st=(("Abra",no,","nr)*nr)
print(st)
-- ERROR:
File "XXXX", line 3
    st=(("Abra",no,","nr)*nr)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:25:39) 
-- CODE:
no=input("Nome do objeto: ")
nr=int(input("Numero de repeticoes do feitico: "))
st=(("Abra",no,","nr)*nr)
print(st)
-- ERROR:
File "XXXX", line 3
    st=(("Abra",no,","nr)*nr)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
